# student_search_backend

./: .gitignore  main.py  nginx.conf  pyproject.toml
models/: search_filters.py  student.py
routers/: auth.py  embeddings.py  misc.py  students.py  users.py
utils/: beacon_auth.py  db.py  search_filters.py  update_db.py
